goit-markup-hw-03

--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta httequiv="X--textUA-Compatible" content="IE=edge">
+    <meta http-equiv="X--textUA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,7 +21,7 @@
                         <a class="header-transition" href="index.html"> Студія</a>
                     </li>
                     <li class="lists">
-                        <a class="header-transition" href=""> Портфоліо</a>
+                        <a class="header-transition current" href=""> Портфоліо</a>
                     </li>
                     <li class="lists">
                         <a class="header-transition" href=""> Контакти</a>
@@ -145,10 +145,9 @@
                 </div>
             </section>
     </main>
-    <footer class="footer">
-        <div class="container footer-flex">
+    <footer class="footer footer-margin-top">
+        <div class="container">
             <a class="webstudiofooter" href=""><span class="span-web"> Web</span>Studio</a>
-            <div>
             <address class="footer-address">
                 <ul>
                     <li class="lists">
@@ -169,7 +168,6 @@
                     </li>
                 </ul>
             </address>
-        </div>
         </div>        
     </footer></footer>
     
