--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav class="navigation">
                 <ul class="studio-list">
                     <li class="lists">
-                        <a class="header-transition" href=""> Студія</a>
+                        <a class="header-transition current" href=""> Студія</a>
                     </li>
                     <li class="lists">
                         <a class="header-transition" href="portfolio.html"> Портфоліо</a>
@@ -41,7 +41,7 @@
     </header>
     <main class="main">
         <section class="conteiner-general section">
-            <div class="container conteiner-title-button">
+            <div class="container">
                 <h1 class="main-title">Ефективні рішення для вашого бізнесу</h1>
                 <button class="button-index" type="button">Замовити послугу</button>
             </div>
@@ -123,7 +123,7 @@
             </section>
     </main>
     <footer class="footer">
-        <div class="container footer-flex">
+        <div class="container">
             <a class="webstudiofooter" href=""><span class="span-web"> Web</span>Studio</a>
             <div>
             <address class="footer-address">
