--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X--textUA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -70,7 +70,7 @@
                             </div>
                         </li>
                         <li class="lists lists-different-page">
-                            <img src="images/imagesportfolio/image (1).jpg" alt="Дизайн" width="370" height="294">
+                            <img src="images/imagesportfolio/image1.jpg" alt="Дизайн" width="370" height="294">
                             <div class="border-text">
                                 <div class="container-text-portfolio">
                                     <h2 class="portfolio-description">Постер New Orlean vs Golden Star</h2>
@@ -79,7 +79,7 @@
                             </div>
                         </li>
                         <li class="lists lists-different-page">
-                            <img src="images/imagesportfolio/image (2).jpg" alt="Додаток" width="370" height="294">
+                            <img src="images/imagesportfolio/image2.jpg" alt="Додаток" width="370" height="294">
                             <div class="border-text">
                                 <div class="container-text-portfolio">
                                     <h2 class="portfolio-description">Ресторан Seafood</h2>
@@ -88,7 +88,7 @@
                             </div>
                         </li>
                         <li class="lists lists-different-page">
-                            <img src="images/imagesportfolio/image (3).jpg" alt="Маркетинг" width="370" height="294">
+                            <img src="images/imagesportfolio/image3.jpg" alt="Маркетинг" width="370" height="294">
                             <div class="border-text">
                                 <div class="container-text-portfolio">
                                     <h2 class="portfolio-description">Проєкт Prime</h2>
@@ -97,7 +97,7 @@
                             </div>
                         </li>
                         <li class="lists lists-different-page">
-                            <img src="images/imagesportfolio/image (4).jpg" alt="Додаток" width="370" height="294">
+                            <img src="images/imagesportfolio/image4.jpg" alt="Додаток" width="370" height="294">
                             <div class="border-text">
                                 <div class="container-text-portfolio">
                                     <h2 class="portfolio-description">Проєкт Boxes</h2>
@@ -106,7 +106,7 @@
                             </div>
                         </li>
                         <li class="lists lists-different-page">
-                            <img src="images/imagesportfolio/image (5).jpg" alt="Веб-сайт" width="370" height="294">
+                            <img src="images/imagesportfolio/image5.jpg" alt="Веб-сайт" width="370" height="294">
                             <div class="border-text">
                                 <div class="container-text-portfolio">
                                     <h2 class="portfolio-description">Inspiration has no Borders</h2>
@@ -115,7 +115,7 @@
                             </div>
                         </li>
                         <li class="lists lists-different-page">
-                            <img src="images/imagesportfolio/image (6).jpg" alt="Дизайн" width="370" height="294">
+                            <img src="images/imagesportfolio/image6.jpg" alt="Дизайн" width="370" height="294">
                             <div class="border-text">
                                 <div class="container-text-portfolio">
                                     <h2 class="portfolio-description">Видання Limited Edition</h2>
@@ -124,7 +124,7 @@
                             </div>
                         </li>
                         <li class="lists lists-different-page">
-                            <img src="images/imagesportfolio/image (7).jpg" alt="Маркетинг" width="370" height="294">
+                            <img src="images/imagesportfolio/image7.jpg" alt="Маркетинг" width="370" height="294">
                             <div class="border-text">
                                 <div class="container-text-portfolio">
                                     <h2 class="portfolio-description">Проєкт LAB</h2>
@@ -133,7 +133,7 @@
                             </div>
                         </li>
                         <li class="lists lists-different-page">
-                            <img src="images/imagesportfolio/image (8).jpg" alt="Додаток" width="370" height="294">
+                            <img src="images/imagesportfolio/image8.jpg" alt="Додаток" width="370" height="294">
                             <div class="border-text">
                                 <div class="container-text-portfolio">
                                     <h2 class="portfolio-description">Growing Business</h2>
@@ -169,7 +169,6 @@
                 </ul>
             </address>
         </div>        
-    </footer></footer>
-    
+    </footer>
 </body>
 </html>
